Create turtles Serializer